# libunalix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
man/: unalixc.1
src/: address.c  address.h  af_alg.hpp  callbacks.c  callbacks.h  clean_url.c  clean_url.cpp  clean_url.h  clean_url.hpp  cli.cpp  cli_help.hpp  connection.c  connection.h  dns.c  dns.cpp  dns.h  dns.hpp  errors.c  errors.h  exceptions.hpp  http.c  http.h  http_client.c  http_client.h  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_utils.cpp  http_utils.hpp  main.cpp  network.h  proxy.h  query.c  query.h  regex.c  regex.h  ruleset.c  ruleset.h  rulesets.hpp  (+35 more)
submodules/jansson/: CMakeLists.txt
submodules/pcre2/: CMakeLists.txt  CTestCustom.ctest  CTestTestfile.cmake  pcre2_grep_test.sh  pcre2_test.sh
test/: test_clean_url.c  test_clean_url.cpp  test_http.c  test_query.c  test_uri.c
test/rulesets/: missing_urlpattern_key.json  rulesets.json  wrong_exceptions_type.json  wrong_providers_type.json  wrong_rawrules_type.json  wrong_redirections_type.json  wrong_referralmarketing_type.json  wrong_rules_type.json  wrong_urlpattern_type.json
tool/: ssl.h.py
tools/: cli_help.hpp.py  rulesets.hpp.py  ssl_certs.hpp.py
